--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "migrate:test": "env NODE_ENV=test npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "build": "echo 'build script executed'"
   },
   "keywords": [],
   "author": "",
