--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node src/server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "build": "react-scripts build",
+    //"build": "react-scripts build",
     "serve": "serve -s build",
     "preserve": "npm run build"
   },
