--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "dev": "nodemon src/server.js",
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
-    "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
+    "migrate:production": "env NODE_TLS_REJECT_UNAUTHORIZED='0' SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit && npm run migrate:production",
     "deploy": "git push heroku master",
     "serve": "serve -s build",
     "preserve": "npm run build"
   },
-  "keywords": [],
   "engines": {
     "node": "13.7.0"
   },
